updated as of 7-31-21 7:50pm

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <div id="mySelection"></div>
                   
 
-               <br>  <br>   <br>  <br> 
+               <br>  <br>   <br> <div class="textAbove">Few Images of the Parks (Scroll left or right )</div>   <br> 
                 <div class="carousel carousel-slider" id="Carousal">
                   <a class="carousel-item" href="#one!"><img src="./assets/images/pic1.JPEG"></a>
                   <a class="carousel-item" href="#two!"><img src="./assets/images/pic2.JPEG"></a>
@@ -280,8 +280,41 @@
 
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="jquery.backstretch.min.js"></script>
+
+
+
+
+<footer class="footer transparent">
+   <div class="container">
+     <div class="row">
+       <div class="col l6 s12">
+         <h5 class="black-text">For More Information on Parks and Activities</h5>
+         <p class="textLink"><a class="grey-text text-lighten-4" href="https://www.nps.gov/index.htm" target="_blank">Please click here</p>
+       </div>
+       <div class="col l4 offset-l2 s12">
+         <h5 class="developers-text">Meet the Developers</h5>
+         <ul>
+           <li><a class="grey-text text-lighten-3" href="https://kamm8899.github.io/Professional-Portifolio/" target="_blank">Jessica Kamman</a></li>
+           <li><a class="grey-text text-lighten-3" href="https://ronnieve23.github.io/" target="_blank">Ronnieve Romero</a></li>
+           <li><a class="grey-text text-lighten-3" href="https://walterlaw19.github.io/first-portfolio/" target="_blank">Walter Gonzales</a></li>
+           <li><a class="grey-text text-lighten-3" href="https://miraj00.github.io/" target="_blank">Miraj Patel</a></li>
+         </ul>
+       </div>
+     </div>
+   </div>
+   <div class="footer-copyright">
+     <div class="container"> 
+        © 2021 Copyright by Park Lovers !!
+     <a class="grey-text text-lighten-4 right" href="https://www.nps.gov/nature/index.htm" target="_blank">Help Protect the Nature !!</a>
+     </div>
+   </div>
+ </footer>
+
+
+
+
+
+
          
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -292,13 +325,10 @@
 
    </body>
 
+   
+
 
 
 </html>
 
 
-
-<!--
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-
--->
