header set with index

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body >
    <header>    
-        <h3 class="white-text">National Park Trip Planner</h3>
-  <!--      <button class="dropbtn btn waves-effect waves-light btn" onclick="capture()">Click to Take ScreenShot</button>  -->
+        <div class="white-text">National Park Trip Planner</div>
    </header>
    <br>
    
@@ -48,10 +47,6 @@
                   <a class="carousel-item" href="#five!"><img src="./assets/images/pic5.JPEG"></a>
                 </div>
        
-
-
-
-
             </form>
          </div>
 
@@ -309,10 +304,6 @@
      </div>
    </div>
  </footer>
-
-
-
-
 
 
          
